@@ -146,13 +146,7 @@ module Formtastic
       # @option options :multiple [Boolean]
       #   Specify if the `:select` input should allow multiple selections or not (defaults to `belongs_to` associations, and `true` for `has_many` and `has_and_belongs_to_many` associations)
       #
-      # @option options :group_by [Symbol]
-      #   TODO will probably be deprecated
-      #
       # @option options :find_options [Symbol]
-      #   TODO will probably be deprecated
-      #
-      # @option options :group_label [Symbol]
       #   TODO will probably be deprecated
       #
       # @option options :include_blank [Boolean]
@@ -161,7 +155,6 @@ module Formtastic
       # @option options :prompt [String]
       #   Specify the text in the first ('blank') `:select` input `<option>` to prompt a user to make a selection (implicitly sets `:include_blank` to `true`)
       #
-      # @todo Can we deprecate & kill `:group_by` & `:group_label`? Should be done with :collection => grouped_options_for_select(...)
       # @todo Can we deprecate & kill `:find_options`? Should be done with MyModel.some_scope.where(...).order(...).whatever_scope
       # @todo Can we deprecate & kill `:label`, `:hint` & `:prompt`? All strings could be shifted to i18n!
       #
