@@ -15,6 +15,8 @@ module Formtastic
         warn_deprecated_option!(:value, ":input_html => { :value => '...'}")
         warn_deprecated_option!(:hint_class, "default_hint_class configuration")
         warn_deprecated_option!(:error_class, "default_error_class configuration")
+        warn_deprecated_option!(:group_by, ":collection option with a HTML string generated by Rails' grouped_options_for_select()")
+        warn_deprecated_option!(:group_label, ":collection option with a HTML string generated by Rails' grouped_options_for_select()")
       end
       
       # Usefull for deprecating options.
