@@ -4,6 +4,7 @@ HEAD
 * deprecated the top-level :value option that is only used by HiddenInput
 * deprecated :hint_class option (use global configuration)
 * deprecated :error_class option (use global configuration)
+* deprecated :group_by and :group_label (use :collection option with a HTML string generated by Rails' grouped_options_for_select())
 
 2.1.0
 
